--- a/my-account-my-address.html
+++ b/my-account-my-address.html
@@ -249,12 +249,16 @@
                                 </div>
 
                                 <div class="acccontentsect__body myaddr">
-                                    <div class="row">
+                                    <div class="row selectbilling">
                                         <div class="col-xl-6">
-                                            <div class="addressinfobox">
+                                            <div class="addressinfobox active">
+                                                <input type="radio" name="selectbilling" id="billing1">
                                                 <div class="addressinfobox__info">
-                                                    <button class="setdefault active">Default</button>
-                                                    <p class="name">Struk Arsen Tarasovich</p>
+                                                    <label class="setdefault" for="billing1">
+                                                        <span class="act">Default</span>
+                                                        <span class="dis">Set as default</span>
+                                                    </label>
+                                                    <p class="name">Struk Andriy Tarasovych</p>
                                                     <p>via Bordina 6</p>
                                                     <p>Bergamo, PG 06034</p>
                                                     <p>English</p>
@@ -267,11 +271,15 @@
                                         </div>
                                         <div class="col-xl-6">
                                             <div class="addressinfobox">
+                                                <input type="radio" name="selectbilling" id="billing2">
                                                 <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
+                                                    <label class="setdefault" for="billing2">
+                                                        <span class="act">Default</span>
+                                                        <span class="dis">Set as default</span>
+                                                    </label>
                                                     <p class="name">Struk Andriy Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
+                                                    <p>via Bordina 6</p>
+                                                    <p>Bergamo, PG 06034</p>
                                                     <p>English</p>
                                                 </div>
                                                 <div class="addressinfobox__btns">
@@ -282,11 +290,15 @@
                                         </div>
                                         <div class="col-xl-6">
                                             <div class="addressinfobox">
+                                                <input type="radio" name="selectbilling" id="billing3">
                                                 <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
-                                                    <p class="name">Struk Bogdan Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
+                                                    <label class="setdefault" for="billing3">
+                                                        <span class="act">Default</span>
+                                                        <span class="dis">Set as default</span>
+                                                    </label>
+                                                    <p class="name">Struk Andriy Tarasovych</p>
+                                                    <p>via Bordina 6</p>
+                                                    <p>Bergamo, PG 06034</p>
                                                     <p>English</p>
                                                 </div>
                                                 <div class="addressinfobox__btns">
@@ -297,11 +309,15 @@
                                         </div>
                                         <div class="col-xl-6">
                                             <div class="addressinfobox">
+                                                <input type="radio" name="selectbilling" id="billing4">
                                                 <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
-                                                    <p class="name">Struk Sofi Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
+                                                    <label class="setdefault" for="billing4">
+                                                        <span class="act">Default</span>
+                                                        <span class="dis">Set as default</span>
+                                                    </label>
+                                                    <p class="name">Struk Andriy Tarasovych</p>
+                                                    <p>via Bordina 6</p>
+                                                    <p>Bergamo, PG 06034</p>
                                                     <p>English</p>
                                                 </div>
                                                 <div class="addressinfobox__btns">
@@ -323,7 +339,6 @@
         <img class="accbgel1" src="img/background-elements/bgelem7.png" alt="img">
         <img class="accbgel2" src="img/background-elements/bgelem6.png" alt="img">
     </main>
-    
 
     <footer class="footer">
         <div class="container">
