--- a/my-account-personal-info.html
+++ b/my-account-personal-info.html
@@ -301,6 +301,8 @@
             </div>
         </section>
 
+        <img class="accbgel1" src="img/background-elements/bgelem7.png" alt="img">
+        <img class="accbgel2" src="img/background-elements/bgelem6.png" alt="img">
     </main>
 
     <footer class="footer">
@@ -367,6 +369,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <script src="js/lib/jquery.js"></script>
