--- a/sitemap.html
+++ b/sitemap.html
@@ -44,7 +44,9 @@
             <li><a href="my-account-my-address.html" target="_blank">My Account - My Address</a></li>
             <li><a href="my-account-my-address-edit.html" target="_blank">My Account - My Address - Edit</a></li>
             <li><a href="my-account-my-credit-cards.html" target="_blank">My Account - My Credit Cards</a></li>
-            
+            <li><a href="my-account-add-card.html" target="_blank">My Account - Add card</a></li>
+            <li><a href="my-account-edit-card.html" target="_blank">My Account - Edit card</a></li>
+            <li><a href="my-account-email-preferences.html" target="_blank">My Account - Email preferences</a></li>
         </ul>
     </div>
 
