--- a/my-account-edit-card.html
+++ b/my-account-edit-card.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - My Credit Cards</title>
+    <title>My Account - Edit Card</title>
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
@@ -242,77 +242,98 @@
                                                 <input type="text" placeholder="Search on Food...">
                                                 <button><img src="img/header/search-icon.svg" alt="search"></button>
                                             </div>
-                                            <a href="#" class="greenbtn"><img src="img/account/plus.svg" alt="add"> Add
-                                                Credit Cards</a>
+                                            <a href="#" class="greenbtn">
+                                                <img src="img/account/plus.svg" alt="add">
+                                                Add Credit Cards
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="acccontentsect__body myaddr">
-                                    <div class="creditcardswrapper">
-                                        <div class="row selectbilling">
-                                            <div class="col-xl-6">
-                                                <div class="addressinfobox active">
-                                                    <input type="radio" name="selectbilling" id="billing1" checked>
-                                                    <div class="addressinfobox__info">
-                                                        <label class="setdefault" for="billing1">
-                                                            <span class="act">Available</span>
-                                                            <span class="dis">Set as default</span>
-                                                        </label>
-                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img">
-                                                            MC **** 5684</p>
-                                                        <p>via Bordina 6</p>
-                                                        <p>Bergamo, PG 06034</p>
-                                                        <p>English</p>
-                                                    </div>
-                                                    <div class="addressinfobox__btns">
-                                                        <a href="#" class="bordergreenbtn">Edit</a>
-                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                    <form action="#">
+                                        <div class="widthwrap">
+                                            <div class="cardhead">
+                                                <img src="img/account/cardicon.png" alt="img">
+                                                <p>
+                                                    MC **** 3033
+                                                </p>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <div class="inputfield">
+                                                        <input type="text" id="expiration" placeholder="12/25"
+                                                            required>
+                                                        <label for="expiration">Expiration MM/YY*</label>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div class="col-xl-6">
-                                                <div class="addressinfobox">
-                                                    <input type="radio" name="selectbilling" id="billing2">
-                                                    <div class="addressinfobox__info">
-                                                        <label class="setdefault" for="billing2">
-                                                            <span class="act">Available</span>
-                                                            <span class="dis">Set as default</span>
-                                                        </label>
-                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img">
-                                                            MC **** 5684</p>
-                                                        <p>via Bordina 6</p>
-                                                        <p>Bergamo, PG 06034</p>
-                                                        <p>English</p>
-                                                    </div>
-                                                    <div class="addressinfobox__btns">
-                                                        <a href="#" class="bordergreenbtn">Edit</a>
-                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                                <div class="col-12">
+                                                    <div class="inputfield">
+                                                        <input type="text" id="namecard" placeholder="Name on Card"
+                                                            required>
+                                                        <label for="namecard">Name on Card</label>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div class="col-xl-6">
-                                                <div class="addressinfobox">
-                                                    <input type="radio" name="selectbilling" id="billing3">
-                                                    <div class="addressinfobox__info">
-                                                        <label class="setdefault" for="billing3">
-                                                            <span class="act">Available</span>
-                                                            <span class="dis">Set as default</span>
-                                                        </label>
-                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img">
-                                                            MC **** 5684</p>
-                                                        <p>via Bordina 6</p>
-                                                        <p>Bergamo, PG 06034</p>
-                                                        <p>English</p>
-                                                    </div>
-                                                    <div class="addressinfobox__btns">
-                                                        <a href="#" class="bordergreenbtn">Edit</a>
-                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                                <div class="col-12">
+                                                    <div class="inputfield">
+                                                        <div class="checkwrapper">
+                                                            <input type="checkbox" id="setaddr1">
+                                                            <label for="setaddr1">Set as default payment method</label>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                        <div class="selectbilling">
+                                            <p class="title">Select Billing Address</p>
+                                            <div class="row">
+                                                <div class="col-xl-6">
+                                                    <div class="addressinfobox active">
+                                                        <input type="radio" name="selectbilling" id="billing1" checked>
+                                                        <div class="addressinfobox__info">
+                                                            <label class="setdefault" for="billing1">
+                                                                <img class="act" src="img/checkout/check.svg" alt="img">
+                                                                <span class="dis">Set as default</span>
+                                                            </label>
+                                                            <p class="name">Struk Arsen Tarasovich</p>
+                                                            <p>via Bordina 6</p>
+                                                            <p>Bergamo, PG 06034</p>
+                                                            <p>English</p>
+                                                        </div>
+                                                        <div class="addressinfobox__btns">
+                                                            <a href="#" class="bordergreenbtn">Edit</a>
+                                                            <a href="#" class="bordergreenbtn">Remove</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xl-6">
+                                                    <div class="addressinfobox">
+                                                        <input type="radio" name="selectbilling" id="billing2">
+                                                        <div class="addressinfobox__info">
+                                                            <label class="setdefault" for="billing2">
+                                                                <img class="act" src="img/checkout/check.svg" alt="img">
+                                                                <span class="dis">Set as default</span>
+                                                            </label>
+                                                            <p class="name">Struk Arsen Tarasovich</p>
+                                                            <p>via Bordina 6</p>
+                                                            <p>Bergamo, PG 06034</p>
+                                                            <p>English</p>
+                                                        </div>
+                                                        <div class="addressinfobox__btns">
+                                                            <a href="#" class="bordergreenbtn">Edit</a>
+                                                            <a href="#" class="bordergreenbtn">Remove</a>
+                                                        </div>
+                                                    </div>
+
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="billingbtns">
+                                            <a href="#" class="billingbtns__cancel bordergreenbtn">Cancel</a>
+                                            <input type="submit" value="Save" class="greenbtn">
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
 
