--- a/my-account.html
+++ b/my-account.html
@@ -441,6 +441,9 @@
                 </div>
             </div>
         </section>
+
+        <img class="accbgel1" src="img/background-elements/bgelem7.png" alt="img">
+        <img class="accbgel2" src="img/background-elements/bgelem6.png" alt="img">
     </main>
 
     <footer class="footer">
