--- a/sitemap.html
+++ b/sitemap.html
@@ -47,6 +47,8 @@
             <li><a href="my-account-add-card.html" target="_blank">My Account - Add card</a></li>
             <li><a href="my-account-edit-card.html" target="_blank">My Account - Edit card</a></li>
             <li><a href="my-account-email-preferences.html" target="_blank">My Account - Email preferences</a></li>
+            <li><a href="my-account-recent-orders.html" target="_blank">My Account - Recent Orders</a></li>
+            <li><a href="my-account-posted-reviews.html" target="_blank">My Account - My Posted Reviews</a></li>
         </ul>
     </div>
 
@@ -79,6 +81,17 @@
             color: #222;
             color: #fff;
             font-weight: 500;
+        }
+
+        @media(max-width:800.8px) {
+            ul {
+                max-width: 100%;
+                flex: 0 0 100%;
+            }
+
+            li {
+                margin-bottom: 20px;
+            }
         }
     </style>
 
