--- a/my-account-posted-reviews.html
+++ b/my-account-posted-reviews.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - Email preferences</title>
+    <title>My Account - My Posted Reviews</title>
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
@@ -119,7 +119,7 @@
             <div class="container">
                 <ul>
                     <li><a href="#">My Account</a></li>
-                    <li> email preferences</li>
+                    <li>my Posted Reviews</li>
                 </ul>
             </div>
         </div>
@@ -131,7 +131,7 @@
                         <div class="aside-menubtn">
                             <img src="img/account/aside-menu.svg" alt="menu">
                         </div>
-                        
+
                         <aside class="accountsidebar">
                             <div class="accountsidebar__wrap">
                                 <div class="closesidebar">
@@ -164,7 +164,7 @@
                                                 My Credit cards
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li>
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-email.svg" alt="icon">
@@ -185,7 +185,7 @@
                                                 Recent Orders
                                             </a>
                                         </li>
-                                        <li>
+                                        <li class="active">
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-postedreview.svg" alt="icon">
@@ -232,51 +232,109 @@
                                 <div class="acccontentsect__header">
                                     <div class="leftsect">
                                         <p>
-                                            <img src="img/account/accsect-ic6.svg" alt="img">
-                                            Email preferences
-                                            <span>Choose how we communicate with you and what we share.</span>
+                                            <img src="img/account/accsect-ic7.svg" alt="img">
+                                            My Posted Reviews
                                         </p>
                                     </div>
                                 </div>
 
-                                <div class="acccontentsect__body">
-                                    <div class="marketingemailsbox">
-                                        <p class="title">Marketing emails</p>
-                                        <p>
-                                            Emails about your account and orders are important. We send those even if
-                                            you have opted out of marketing emails.
-                                        </p>
-                                        <p>
-                                            We send marketing emails to <span>name@surname.com</span> <a href="#">Edit</a>
-                                        </p>
-                                    </div>
-                                    <div class="receiveemails">
-                                        <div class="receiveemails__header">
-                                            <p class="title">
-                                                Receive marketing emails
-                                            </p>
-                                            <div class="switch">
-                                                <input type="checkbox" id="switch" checked><label for="switch">Toggle</label>
-                                            </div>
+                                <div class="acccontentsect__body mypostedreviews">
+                                    <!-- <div class="contactsection__tabheader">
+                                        <a href="#ftab" class="tabbtn btn1 active" data-tab="tabcontent1">Contact form</a>
+                                        <a href="#sectab" class="tabbtn btn2" data-tab="tabcontent2">Shedule a call</a>
+                                    </div> -->
+                                    <!-- <div class="contactsection__tabbody">
+                                        <div class="tabcontent tbcont1" id="tabcontent1"></div>
+                                    </div> -->
+                                    <div class="accpostedreviews">
+                                        <div class="accpostedreviews__header">
+                                            <span class="tabbtn active" data-tab="tabcontent1">All</span>
+                                            <span class="tabbtn" data-tab="tabcontent2">Recent</span>
                                         </div>
-                                        <div class="receiveemails__checkfileds">
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check1" checked>
-                                                <label for="check1">Yes, I want to receive the prescription by e-mail, etc.</label>
+                                        <div class="contactsection__tabbody">
+                                            <div class="tabcontent show" id="tabcontent1">
+                                                <div class="postedreviewbox">
+                                                    <div class="postedreviewbox__left">
+                                                        <div class="imgwrap">
+                                                            <img src="img/account/postedreview1.png" alt="img">
+                                                        </div>
+                                                    </div>
+                                                    <div class="postedreviewbox__right">
+                                                        <p class="title">
+                                                            Good Cookies without, Gluten and Lactose Free Cookies, Dark
+                                                            Chocolate Drops Cookies Céréal
+                                                        </p>
+                                                        <div class="rating">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star-emp.svg" alt="star">
+                                                        </div>
+                                                        <textarea>Most orders are shipped within 1 hour of being placed. Food will not be able to cancel an order once it has been shipped. You will be able to start the return process after receiving your order. For this you need to Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima sapiente quam saepe repellat explicabo est alias laboriosam, ipsum, cum dolorum temporibus nemo quibusdam consequatur neque ipsam quidem, itaque ipsa unde!</textarea>
+
+                                                        <div class="postedreviewbox__bottomsect">
+                                                            <a href="#" class="postedreview__edit">Edit</a>
+                                                            <a href="#" class="postedreview__share">Share <img src="img/account/share-icon.svg" alt="share"></a>
+                                                            <span class="date">August 2022</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="postedreviewbox">
+                                                    <div class="postedreviewbox__left">
+                                                        <div class="imgwrap">
+                                                            <img src="img/account/postedreview2.png" alt="img">
+                                                        </div>
+                                                    </div>
+                                                    <div class="postedreviewbox__right">
+                                                        <p class="title">
+                                                            Protein-Pancake-Parent-IT (Pancake Proteici)
+                                                        </p>
+                                                        <div class="rating">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star.svg" alt="star">
+                                                            <img src="img/category/star-emp.svg" alt="star">
+                                                        </div>
+                                                        <textarea>I bought this pancake mix on the recommendation of my boyfriend. Even though I wasn't very convinced, I wanted to trust him.
+                                                        </textarea>
+
+                                                        <div class="postedreviewbox__bottomsect">
+                                                            <a href="#" class="postedreview__edit">Edit</a>
+                                                            <a href="#" class="postedreview__share">Share <img src="img/account/share-icon.svg" alt="share"></a>
+                                                            <span class="date">August 2022</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+
+
+
+
+
+
                                             </div>
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check2" checked>
-                                                <label for="check2">This is how I want to receive news from the blog</label>
-                                            </div>
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check3">
-                                                <label for="check3">I want to receive notifications about new products</label>
-                                            </div>
+                                            <div class="tabcontent" id="tabcontent2">2</div>
                                         </div>
                                     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
