--- a/my-account-recent-orders.html
+++ b/my-account-recent-orders.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - Email preferences</title>
+    <title>My Account - Recent Orders</title>
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
@@ -119,7 +119,7 @@
             <div class="container">
                 <ul>
                     <li><a href="#">My Account</a></li>
-                    <li> email preferences</li>
+                    <li>Recent Orders</li>
                 </ul>
             </div>
         </div>
@@ -131,7 +131,7 @@
                         <div class="aside-menubtn">
                             <img src="img/account/aside-menu.svg" alt="menu">
                         </div>
-                        
+
                         <aside class="accountsidebar">
                             <div class="accountsidebar__wrap">
                                 <div class="closesidebar">
@@ -164,7 +164,7 @@
                                                 My Credit cards
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li>
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-email.svg" alt="icon">
@@ -177,7 +177,7 @@
                                 <div class="accountsidebar__box">
                                     <p class="title">My Activity</p>
                                     <ul>
-                                        <li>
+                                        <li class="active">
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-recentorder.svg" alt="icon">
@@ -228,55 +228,162 @@
                     </div>
                     <div class="accountsection-colright">
                         <div class="accountcontent">
-                            <div class="acccontentsect">
+                            <div class="acccontentsect myaccrecorder">
                                 <div class="acccontentsect__header">
                                     <div class="leftsect">
                                         <p>
-                                            <img src="img/account/accsect-ic6.svg" alt="img">
-                                            Email preferences
-                                            <span>Choose how we communicate with you and what we share.</span>
+                                            <img src="img/account/accsect-ic1.svg" alt="img">
+                                            Recent Orders
                                         </p>
                                     </div>
                                 </div>
 
                                 <div class="acccontentsect__body">
-                                    <div class="marketingemailsbox">
-                                        <p class="title">Marketing emails</p>
-                                        <p>
-                                            Emails about your account and orders are important. We send those even if
-                                            you have opted out of marketing emails.
-                                        </p>
-                                        <p>
-                                            We send marketing emails to <span>name@surname.com</span> <a href="#">Edit</a>
-                                        </p>
-                                    </div>
-                                    <div class="receiveemails">
-                                        <div class="receiveemails__header">
-                                            <p class="title">
-                                                Receive marketing emails
-                                            </p>
-                                            <div class="switch">
-                                                <input type="checkbox" id="switch" checked><label for="switch">Toggle</label>
+                                    <div class="recentorder-filter">
+                                        <div class="leftsect">
+                                            <div class="generalselect">
+                                                <select class="customselect" name="Filter">
+                                                    <option value="0">Filter</option>
+                                                    <option value="1">Filter 1</option>
+                                                    <option value="2">Filter 2</option>
+                                                    <option value="3">Filter 3</option>
+                                                </select>
                                             </div>
                                         </div>
-                                        <div class="receiveemails__checkfileds">
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check1" checked>
-                                                <label for="check1">Yes, I want to receive the prescription by e-mail, etc.</label>
+                                        <div class="rightsect">
+                                            <div class="searchblock">
+                                                <input type="text" placeholder="Search on Food...">
+                                                <button><img src="img/header/search-icon.svg" alt="search"></button>
                                             </div>
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check2" checked>
-                                                <label for="check2">This is how I want to receive news from the blog</label>
+                                        </div>
+
+
+
+
+
+
+
+                                    </div>
+
+                                    <div class="myacc-deliveredwrap">
+                                        <div class="myacc-delivered">
+                                            <div class="myacc-delivered__left">
+                                                <p class="delordertitle">
+                                                    <img src="img/checkout/check.svg" alt="img">
+                                                    Delivered
+                                                </p>
+                                                <p class="delorderinfo">
+                                                    <span>Delivered on April 16, 2023</span>
+                                                    <span>Order No. 517547572</span>
+                                                </p>
+                                                <div class="deliveredproducts">
+                                                    <div class="deliveredproduct">
+                                                        <div class="deliveredproduct__img">
+                                                            <img src="img/account/recent-order1.png" alt="img">
+                                                        </div>
+                                                        <div class="deliveredproduct__descr">
+                                                            <p class="title">Musclefit Protein Pancake Prepared Fast easy</p>
+                                                            <p class="units">Units: 1</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="deliveredproduct">
+                                                        <div class="deliveredproduct__img">
+                                                            <img src="img/account/recent-order2.png" alt="img">
+                                                        </div>
+                                                        <div class="deliveredproduct__descr">
+                                                            <p class="title">Bauli Plumcake "Senza" Mela - 132 G</p>
+                                                            <p class="units">Units: 1</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="receiveemails_checkfield">
-                                                <input type="checkbox" id="check3">
-                                                <label for="check3">I want to receive notifications about new products</label>
+
+                                            <div class="myacc-delivered__right">
+                                                <a href="#" class="bordergreenbtn">Write a review</a>
+                                                <a href="#" class="greenbtn">Buy again</a>
+                                            </div>
+                                        </div>
+                                        <div class="myacc-delivered">
+                                            <div class="myacc-delivered__left">
+                                                <p class="delordertitle">
+                                                    <img src="img/checkout/check.svg" alt="img">
+                                                    Delivered
+                                                </p>
+                                                <p class="delorderinfo">
+                                                    <span>Delivered on April 01, 2023</span>
+                                                    <span>Order No. 517547575</span>
+                                                </p>
+                                                <div class="deliveredproducts">
+                                                    <div class="deliveredproduct">
+                                                        <div class="deliveredproduct__img">
+                                                            <img src="img/account/recent-order3.png" alt="img">
+                                                        </div>
+                                                        <div class="deliveredproduct__descr">
+                                                            <p class="title">Pesoforma Porridge Cacao e Avena, 5 x 55g</p>
+                                                            <p class="units">Units: 1</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="myacc-delivered__right">
+                                                <a href="#" class="bordergreenbtn">Write a review</a>
+                                                <a href="#" class="greenbtn">Buy again</a>
+                                            </div>
+                                        </div>
+                                        <div class="myacc-delivered">
+                                            <div class="myacc-delivered__left">
+                                                <p class="delordertitle">
+                                                    <img src="img/checkout/check.svg" alt="img">
+                                                    Delivered
+                                                </p>
+                                                <p class="delorderinfo">
+                                                    <span>Delivered on April 16, 2023</span>
+                                                    <span>Order No. 517547572</span>
+                                                </p>
+                                                <div class="deliveredproducts">
+                                                    <div class="deliveredproduct">
+                                                        <div class="deliveredproduct__img">
+                                                            <img src="img/account/recent-order4.png" alt="img">
+                                                        </div>
+                                                        <div class="deliveredproduct__descr">
+                                                            <p class="title">Porridge senza zuuccheri 375 g</p>
+                                                            <p class="units">Units: 1</p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="deliveredproduct">
+                                                        <div class="deliveredproduct__img">
+                                                            <img src="img/account/recent-order5.png" alt="img">
+                                                        </div>
+                                                        <div class="deliveredproduct__descr">
+                                                            <p class="title">Alpro Avena senza zuccheri 1l</p>
+                                                            <p class="units">Units: 2</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="myacc-delivered__right">
+                                                <a href="#" class="bordergreenbtn">Write a review</a>
+                                                <a href="#" class="greenbtn">Buy again</a>
                                             </div>
                                         </div>
                                     </div>
+
+                                </div>
+
+                                <div class="pagination">
+                                    <ul>
+                                        <li><a href="#"><img src="img/general/pagination-prev.svg" alt="prev"></a></li>
+                                        <li><a href="#">1</a></li>
+                                        <li class="active"><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li>...</li>
+                                        <li><a href="#">11</a></li>
+                                        <li><a href="#"><img src="img/general/pagination-next.svg" alt="next"></a></li>
+                                    </ul>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
