--- a/sitemap.html
+++ b/sitemap.html
@@ -49,6 +49,8 @@
             <li><a href="my-account-email-preferences.html" target="_blank">My Account - Email preferences</a></li>
             <li><a href="my-account-recent-orders.html" target="_blank">My Account - Recent Orders</a></li>
             <li><a href="my-account-posted-reviews.html" target="_blank">My Account - My Posted Reviews</a></li>
+            <li><a href="my-account-posted-blog.html" target="_blank">My Account - My Posted Blog</a></li>
+            <li><a href="my-account-posted-recipes.html" target="_blank">My Account - My Posted Recipes</a></li>
         </ul>
     </div>
 
