--- a/sitemap.html
+++ b/sitemap.html
@@ -39,6 +39,7 @@
             <li><a target="_blank" href="edit-blog.html">Edit blog</a></li>
         </ul>
         <ul>
+            <li><h3>Account</h3></li>
             <li><a href="my-account.html" target="_blank">My Account</a></li>
             <li><a href="my-account-personal-info.html" target="_blank">My Account - Personal Info</a></li>
             <li><a href="my-account-my-address.html" target="_blank">My Account - My Address</a></li>
@@ -51,6 +52,13 @@
             <li><a href="my-account-posted-reviews.html" target="_blank">My Account - My Posted Reviews</a></li>
             <li><a href="my-account-posted-blog.html" target="_blank">My Account - My Posted Blog</a></li>
             <li><a href="my-account-posted-recipes.html" target="_blank">My Account - My Posted Recipes</a></li>
+            <br><br>
+            <li><h3>Seller</h3></li>
+            <li><a href="create-acc.html" target="_blank">Create Account</a></li>
+            <li><a href="seller-create-acc-st1.html" target="_blank">Create a seller account</a></li>
+            <li><a href="seller-create-acc-st2.html" target="_blank">Create a seller account (phone number)</a></li>
+            <li><a href="seller-create-acc-st3.html" target="_blank">Create a seller account (SMS code)</a></li>
+            
         </ul>
     </div>
 
@@ -94,6 +102,13 @@
             li {
                 margin-bottom: 20px;
             }
+        }
+
+        h3 {
+            color: #fff;
+            font-size: 30px;
+            text-decoration: underline;
+            text-underline-offset: 5px;
         }
     </style>
 
